--- a/src/app/gifs/components/card-list/card-list.component.html
+++ b/src/app/gifs/components/card-list/card-list.component.html
@@ -1,11 +1,9 @@
 <div class="row">
-    <div class="col-md-3 col-sm-6">
-        <div class="card mb-2 text-center bg-dark">
-            <div class="card-body text-white">
-                <p class="card-text">
-                    Hola mundo
-                </p>
-            </div>
-        </div>
-    </div>
+    @for (gif of gifsList; track $index) {
+        <gifs-card 
+        [gif]="gif"
+        class="col-md-3 col-sm-6"
+        >
+        </gifs-card>
+    }
 </div>
